# Astro

./: .gitignore  .gitmodules  Astro.prj  AstroConfig.cmake.in  CMakeInstall.txt  CMakeLists-cflags.txt  CMakeLists.txt  README.md  Rakefile  readme.md  sub_branches.yaml
Xcode/Astro.xcodeproj/: project.pbxproj
Xcode/Astro.xcodeproj/project.xcworkspace/xcuserdata/enrico.xcuserdatad/: UserInterfaceState.xcuserstate
Xcode/Astro.xcodeproj/xcuserdata/enrico.xcuserdatad/xcschemes/: xcschememanagement.plist
doc/: Astro_doc.tex  Used_algorithm.tex
doc/figs/: Grafo stati.graffle  coordinate equinoziali.skp
doc/figs/coordinate astronimiche.graffle/: data.plist
doc/figs/coordinate astronimiche.graffle/QuickLook/: Thumbnail.tiff
include/: Astro.hh
include/Astro/: Kepler.hxx
lib/include/Astro/: Units.hxx
maple/: Zhang_Zhou_Mortari_dv2_minimo.mw  Zhang_Zhou_Mortari_dv_minimo.mw  calcolo_dv_minimo_velocità_finale.mw
mex/: Compile.m  common_Mex.cc  common_Mex.hh  mexLambertProblem.cc
src/: Astro.cc  Astro.hh  Astro_autodiff.cc  Astro_functions.cc  Kepler.cc  Rocket.cc  Units.cc  astro.hh  lambert.cc  minimum_DeltaV.cc
src/Astro/: Kepler.hxx  Rocket.hxx  Utils.hxx
src_tests/: test1-Lambert.cc  test2-DeltaV.cc  test3-DeltaV.cc
submodules/: Rakefile
tests-cpp/: test-Lambert.cc
toolbox/: CMakeLists.txt  CompileAstroLib.m  populate_toolbox.rb  setup.m
toolbox/cmake/: CMakeLists-blas-lapack.txt  CMakeLists-cflags.txt  CMakeLists-common.txt  CMakeLists-cpack.txt
toolbox/lib/: Astro.m  Astro_change_handle.m  load_asteroids.m
toolbox/src/: Astro.cc  Astro.hh  Astro_functions.cc  CPUinfo.cc  Console.cc  Kepler.cc  Lambert.cc  Malloc.cc  Numbers.cc  PolynomialRoots-1-Quadratic.cc  PolynomialRoots-2-Cubic.cc  PolynomialRoots-3-Quartic.cc  PolynomialRoots-Utils.cc  Rocket.cc  SystemUtils.cc  Table.cc  ThreadUtils.cc  TicToc.cc  Token.cc  Trace.cc  Utils.cc  Utils_AABB_tree.cc  Utils_AlgoBracket.cc  Utils_AlgoBracket.hh  Utils_AlgoHNewton.cc  Utils_GG2D.cc  Utils_HJPatternSearch.cc  Utils_NelderMead.cc  Utils_Poly.cc  Utils_Poly.hh  Utils_TVD.cc  Utils_fmt.cc  Utils_fmt.hh  Utils_progress_bar.cc  Utils_trace.hh  minimum_DeltaV.cc
toolbox/src/Astro/: Kepler.hxx  Rocket.hxx  Units.hxx  Utils.hxx
toolbox/src/GenericContainer/: GenericContainer.cc  GenericContainer.hh  GenericContainerCollapse.cc  GenericContainerInterface_C.cc  GenericContainerInterface_json.hh  GenericContainerInterface_toml.hh  GenericContainerInterface_yaml.hh  GenericContainerPromote.cc  GenericContainerSerialize.cc  GenericContainerSupport.cc  GenericContainerTables.cc
toolbox/src/Utils/: Console.hxx  Malloc.hxx  Numbers.hxx  Quaternion.hxx  Table.hxx  ThreadPool0.hxx  ThreadPool1.hxx  ThreadPool2.hxx  ThreadPoolBase.hxx  ThreadUtils.hxx  TicToc.hxx  Token.hxx  Utils.hxx  mex_utils.hxx
toolbox/src_mex/: GenericContainerMatlabInterface.cc  GenericContainerMatlabInterface.hh  mex_Astro.cc  mex_AstroJacobian.cxx  mex_AstroMexWrapper.cc  mex_AstroOrbital.cxx  mex_AstroPosition.cxx  mex_Astro_OLD.cc  mex_Check_EQ_for_consistency.cc  mex_DeltaV.cc  mex_Lambert.cc  mex_LambertMinDeltaV.cc  mex_globalMinimumDeltaV.cc  mex_globalMinimumDeltaV2.cc  mex_minimumDeltaV.cc  mex_utils.hh
toolbox/tests/: solar_system.m  solar_system2.m  solar_system3.m  test_E0_grad.m  test_E_grad.m  test_L_grad.m  test_LamberMindeltaV.m  test_M0_grad.m  test_POS0_jacobian.m  test_POS_jacobian.m  test_VEL0_jacobian.m  test_asteroinds_gtoc12.m  test_asteroinds_gtoc12_2.m  test_asteroinds_gtoc4.m  test_asteroinds_gtoc5.m  test_deltaV.asv  test_deltaV.m  test_theta0_grad.m
toolbox/tests/asteroids/: ast_ephem_gtoc4.txt  ast_ephem_gtoc5.txt
